# gstreamer-vscode-setup

./: CMakeLists.txt  README.md  hello.cpp
